Fix overflow issue.

--- a/style/components/main-content.scss
+++ b/style/components/main-content.scss
@@ -28,7 +28,16 @@
     margin-top: 0;
   }
 
-  .setup-instruction {
+  .setup-instructions {
+    overflow-y: scroll;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  .setup-instructions-wrapper {
     text-align: center;
     width: 400px;
     margin: 5% auto;
@@ -50,6 +59,7 @@
 
   .browsers {
     text-align: left;
+    margin-top: 15px;
 
     .open-browser {
       background-color: $lightgray-dark;
